<resources>
    <string name="lab_test_res">Risultati Test</string>
    <string name="start">inizia</string>
    <string name="reset" translatable="false">reset</string>
    <string name="next">prossimo</string>
    <string name="session_text">sessione</string>
    <string name="trial_id">trial #%1$s</string>
    <string name="abort">interrompi test</string>
    <string name="pause">PAUSA</string>
    <string name="resume">RIPRENDI</string>
    <string name="delete">cancella</string>
    <string name="keep">mantieni</string>
    <string name="continue_txt">prosegui</string>
    <string name="restart">ricomincia</string>
    <string name="start_test">incomincia il test</string>
    <string name="restart_training">ripeti il training</string>
    <string name="stop">STOP</string>
    <string name="cancel">cancella</string>
    <string name="continue_label">CONTINUA</string>
    <string name="block_ended">Questa parte del test è terminata\nVuoi continuare o interrompere per poi proseguire un\'altra volta?</string>
    <string name="training_ended">Il training è terminato\nVuoi ripeterlo o iniziare il test?</string>
    <string name="block_ended_blind">Questa parte del test è terminata...Chiedi assistenza per continuare</string>
    <string name="training_ended_blind">La parte di training è terminata...Chiedi assistenza per continuare</string>
    <string name="test_ended">Il Test è terminato...grazie per aver partecipato</string>
    <string name="test_want2abort">Sei sicuro di voler realmente interrompere il test?</string>
    <string name="test_aborted">Hai deciso di interrompere il test. Vuoi cancellare i risultati fin qui scritti\n o li vuoi mantenere?</string>
    <string name="test_aborted_blind">Hai deciso di interrompere il test. Chiedi assistenza per completare</string>
    <string name="new_trial">Nuovo stimolo</string>
    <string name="name">nome</string>
    <string name="gender">sesso</string>
    <string name="age">età</string>
    <string name="group">gruppo</string>
    <string name="source">sorgente</string>
    <string name="type">tipo</string>
    <string name="pattern">pattern</string>
    <string name="audio">audio</string>
    <string name="tactile">tattile</string>
    <string name="visual">visivo</string>
    <string name="audio_short">a</string>
    <string name="tactile_short">t</string>
    <string name="visual_short">v</string>
    <string name="duration">durata</string>
    <string name="single">singolo</string>
    <string name="pair">coppia</string>
    <string name="shifted">sfasato</string>
    <string name="distance">distanza</string>
    <string name="aligned">allineato</string>
    <string name="repetitions_number">numero ripetizioni</string>
    <string name="number">numero</string>
    <string name="amplitude_short">Ampl.</string>
    <string name="amplitude">Intensità</string>
    <string name="end_trial_behaviour">Automatico</string>
    <string name="volume">volume</string>
    <string name="volume_short">vol</string>
    <string name="resource_name">nome</string>
    <string name="interactivity">interattivo</string>
    <string name="trials_management">gestione trials</string>
    <string name="do_training" translatable="false">training</string>
    <string name="time">tempo</string>
    <string name="frequency">frequenza</string>
    <string name="condition">condizione</string>
    <string name="population">popolazione</string>
    <string name="warning">Attenzione</string>
    <string name="nblocks">Num. Blocchi</string>
    <string name="durblock_sec">Durata Blocchi [sec]</string>
    <string name="durblock_msec">Durata Blocchi [ms]</string>
    <string name="firstcond">Cond. Iniziale</string>
    <string name="subject_present">Il nome scelto è già esistente. Vuoi continuare ad usare questo nome?</string>
    <string name="subject_block_present">Esiste una precedente sessione di test Vuoi proseguirla o vuoi cancellare tutto e ricominciare da zero?</string>
    <string name="select_subject_info">Indicare nome ed età</string>
    <string name="select_gender">Indicare il sesso</string>
    <string name="select_population">Seleziona una popolazione</string>
    <string name="select_condition">Seleziona una condizione sperimentale</string>
    <string name="select_session">Seleziona una sessione sperimentale</string>
    <string name="select_spinner">Seleziona %1$s</string>
    <string name="select_one_answer">Seleziona una risposta</string>
    <string name="warning_dt_again2abort">Vuoi interrompere il test? esegui un altro tocco lungo per confermare o un tocco singolo per continuare il test</string>
    <string name="exp_intro_blind1">Benvenuto in questo esperimento ... Proverai ora come poter rispondere alla domanda che ti verrà posta </string>
    <string name="exp_intro_blind2">La domanda è</string>
    <string name="exp_intro_blind3">Scorri un dito verso l\'alto per scegliere l\'opzione</string>
    <string name="exp_intro_blind4">scorri verso il basso per l\'opzione</string>
    <string name="exp_intro_blind5">quando sei sicuro della scelta fai un doppio tap veloce</string>
    <string name="exp_intro_blind_assisted">Benvenuto in questo esperimento ... prova a rispondere e quando sei pronto per iniziare, fai un doppio tap veloce </string>
    <string name="exp_letsstart_blind">L\'esperimento sta per iniziare</string>
    <string name="answer_selected">risposta %1$s</string>
    <string name="subject_info_notcorrected">Le seguenti informazioni del soggetto sono errate:\n\n%1$s</string>
    <string name="yes">si</string>
    <string name="no">no</string>
    <string name="whitenoise">rumore</string>
    <string name="trials_fixed">fissi</string>
    <string name="trials_adaptive">adattativi</string>
    <string name="sequence">sequenza</string>
    <string name="session">sessione</string>
    <string-array name="prepost_sessions3_array">
        <item>seleziona...</item>
        <item>pre test</item>
        <item>session 1</item>
        <item>session 2</item>
        <item>session 3</item>
        <item>post test</item>
    </string-array>
    <string-array name="sessions_array">
        <item>seleziona...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="empty_subject_parcel">SOGGETTO E\' VUOTO</string>
    <string name="critical_error">ERRORE IRRECUPERABILE</string>
    <string name="restart_app_suggestion">E\' consigliabile riavviare l\'app</string>
    <string name="contact_developer">E\' consigliabile riavviare l\'app\nin caso l\'errore persista, contattare lo sviluppatore all\'indirizzo:\npsysuite.uvip@gmail.com</string>
    <string name="test_failure">Questo test appare corrotto.\nE\' consigliabile riavviare l\'app\nin caso l\'errore persista, contattare lo sviluppatore all\'indirizzo:\npsysuite.uvip@gmail.com</string>
    <string name="run_test">Eseguendo il test</string>
    <string name="error">Errore</string>
    <string name="error_audiomanager">gestore dell\'audio non valido</string>
    <string name="error_tactilemanager">gestore dell\'tattile non valido</string>
    <string name="error_visualmanager">gestore dell\'visuale non valido</string>
    <string name="internal_error">Il codice ha generato il seguente errore\n%1$s</string>
    <string name="pref_delay_a1" translatable="false">10</string>
    <string name="pref_delay_a2" translatable="false">29</string>
    <string name="pref_delay_a3" translatable="false">18</string>
    <string name="pref_delay_t1" translatable="false">0</string>
    <string name="pref_delay_t2" translatable="false">0</string>
    <string name="pref_delay_v1" translatable="false">29</string>
    <string name="pref_delay_v2" translatable="false">29</string>
    <string name="label_bindings" translatable="false">Temporal Bindings</string>
    <string name="label_temporal_tests">Temporal Tests</string>
    <string name="label_miscellaneous_tests">Various Tests</string>
    <string name="label_decision_tests">Decisions Tests</string>
    <string name="label_illusion_tests">Illusions Tests</string>
    <string name="label_prediction_tests">Prediction Tests</string>
    <string name="start_atb" translatable="false">AT Binding (AT-B)</string>
    <string name="atb_subtask_time_single">Sing Stim</string>
    <string name="atb_subtask_time_single_tag" translatable="false">SS</string>
    <string name="atb_subtask_time_double">Dop Stim</string>
    <string name="atb_subtask_time_double_tag" translatable="false">DS</string>
    <string name="atb_subtask_time_single_tod">Sing Stim Toddl</string>
    <string name="atb_subtask_time_single_tod_tag" translatable="false">SST</string>
    <string name="atb_subtask_time_double_tod">Dop Stim Toddl</string>
    <string name="atb_subtask_time_double_tod_tag" translatable="false">DST</string>
    <string name="atb_subtask_time_infants">tempo infanti</string>
    <string name="atb_subtask_time_infants_tag">INF</string>
    <string name="atb_rb1_text">uguali</string>
    <string name="atb_rb3_text">diversi</string>
    <string name="atb_question">Sono uguali?</string>
    <string name="start_atvb" translatable="false">ATV Binding (ATV-B)</string>
    <string name="atvb_subtask_time_single">Sing Stim</string>
    <string name="atvb_subtask_time_single_tag" translatable="false">SSU</string>
    <string name="atvb_subtask_time_single_b">Sing Stim bilanciato</string>
    <string name="atvb_subtask_time_single_b_tag" translatable="false">SSB</string>
    <string name="atvb_subtask_time_single_b2">Sing Stim bilanciato 2</string>
    <string name="atvb_subtask_time_single_b2_tag" translatable="false">SSB</string>
    <string name="atvb_subtask_time_double">Dop Stim</string>
    <string name="atvb_subtask_time_double_tag" translatable="false">DSU</string>
    <string name="atvb_subtask_time_double2">Dop Stim bilanciato</string>
    <string name="atvb_subtask_time_double2_tag" translatable="false">DSB</string>
    <string name="atvb_rb1_text">si</string>
    <string name="atvb_rb3_text">no</string>
    <string name="atvb_question_equal">Sono uguali?</string>
    <string name="atvb_question_synchro">Sono simultanei?</string>
    <string name="atvb_question_whichsecond">Che tipo di stimolo è il secondo?</string>
    <string name="start_tvb" translatable="false">TV Binding (TV-B)</string>
    <string name="tvb_subtask_time_single">Sing Stim</string>
    <string name="tvb_subtask_time_single_tag" translatable="false">SS</string>
    <string name="tvb_subtask_time_double">Dop Stim</string>
    <string name="tvb_subtask_time_double_tag" translatable="false">DS</string>
    <string name="tvb_subtask_time_single_tod">Sing Stim Toddl</string>
    <string name="tvb_subtask_time_single_tod_tag" translatable="false">SST</string>
    <string name="tvb_subtask_time_double_tod">Dop Stim Toddl</string>
    <string name="tvb_subtask_time_double_tod_tag" translatable="false">DST</string>
    <string name="tvb_rb1_text">uguali</string>
    <string name="tvb_rb3_text">diversi</string>
    <string name="tvb_question">Sono uguali?</string>
    <string name="start_avb" translatable="false">AV Binding (AV-B)</string>
    <string name="avb_subtask_time_single">Sing Stim</string>
    <string name="avb_subtask_time_single_tag" translatable="false">SS</string>
    <string name="avb_subtask_time_double">Dop Stim</string>
    <string name="avb_subtask_time_double_tag" translatable="false">DS</string>
    <string name="avb_subtask_time_single_tod">Sing Stim Toddl</string>
    <string name="avb_subtask_time_single_tod_tag" translatable="false">SST</string>
    <string name="tid_rb_male_text">M</string>
    <string name="tid_rb_female_text">F</string>
    <string name="repeat_trial">ripeti il trial</string>
    <string name="show_result">mostra risultato</string>
</resources>