<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.answers.TwoAFCAnswerDialogFragment">



    <TextView
        android:id="@+id/labAge"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labName" />

    <TextView
        android:id="@+id/labName"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="135dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="none|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:digits="abcdefghijklmnopqrstuvwxyz_0123456789"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:text="@string/tid_rb_male_text" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:text="@string/tid_rb_female_text" />
    </RadioGroup>


    <Spinner
        android:id="@+id/spCondition"
        android:layout_width="373dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Switch
        android:id="@+id/swInteractive"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:text="@string/interactivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Switch
        android:id="@+id/swTraining"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:text="@string/do_training"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Switch
        android:id="@+id/swWhiteNoise"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:text="@string/whitenoise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Switch
        android:id="@+id/swRepeatTrial"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="24dp"
        android:text="@string/repeat_trial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:id="@+id/labSpinner"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="265dp"
        android:text="TEXT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Spinner
        android:id="@+id/spTrialManager"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:id="@+id/labTrialManager"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/trials_management"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Switch
        android:id="@+id/swShowResult"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="24dp"
        android:text="@string/show_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />


    <TextView
        android:id="@+id/labCondition"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:text="@string/condition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:id="@+id/labGender"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labAge" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="586dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="220dp" />

    <TextView
        android:id="@+id/labPopulation"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/population"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labGender" />

    <Spinner
        android:id="@+id/spPopulation"
        android:layout_width="135dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />


    <Button
        android:id="@+id/bt_cancel"
        android:text="@string/cancel"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:background="@color/design_default_color_error"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <Button
        android:id="@+id/bt_clear"
        android:text="@string/reset"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="102dp"
        android:layout_height="63dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/bt_confirm"
        app:layout_constraintStart_toEndOf="@+id/bt_cancel"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <Button
        android:id="@+id/bt_confirm"
        android:text="@string/start"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="62dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:srcCompat="@drawable/green_tick" />

</androidx.constraintlayout.widget.ConstraintLayout>