<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.answers.TwoAFCAnswerDialogFragment">

    <TextView
        android:id="@+id/labName"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:digits="abcdefghijklmnopqrstuvwxyz_0123456789"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labAge"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labName" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="135dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="none|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/labGender"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labAge" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:text="@string/tid_rb_male_text" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:text="@string/tid_rb_female_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/labPopulation"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/population"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labGender" />

    <Spinner
        android:id="@+id/spPopulation"
        android:layout_width="135dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

    <TextView
        android:id="@+id/labCondition"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:text="@string/condition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Spinner
        android:id="@+id/spCondition"
        android:layout_width="220dp"
        android:layout_height="28dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:id="@+id/labTrialManager"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/trials_management"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Spinner
        android:id="@+id/spTrialManager"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Switch
        android:id="@+id/swWhiteNoise"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="85dp"
        android:text="@string/whitenoise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Switch
        android:id="@+id/swRepeatTrial"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="20dp"
        android:text="@string/repeat_trial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Switch
        android:id="@+id/swInteractive"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="125dp"
        android:text="@string/interactivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Switch
        android:id="@+id/swShowResult"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="20dp"
        android:text="@string/show_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="263dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="220dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="345dp" />


    <TextView
        android:id="@+id/labNBlocks"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"

        android:text="@string/nblocks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <EditText
        android:id="@+id/txtNBlocks"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:digits="abcdefghijklmnopqrstuvwxyz_0123456789"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/labNBlocks"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />


    <TextView
        android:id="@+id/labDurBlock"
        android:layout_width="137dp"
        android:layout_height="25dp"
        android:text="@string/durblock_sec"
        app:layout_constraintEnd_toStartOf="@+id/txtDurBlocks"
        app:layout_constraintStart_toEndOf="@+id/txtNBlocks"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <EditText
        android:id="@+id/txtDurBlocks"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_marginEnd="20dp"
        android:digits="abcdefghijklmnopqrstuvwxyz_0123456789"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <TextView
        android:id="@+id/labFirstCond"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/firstcond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <Switch
        android:id="@+id/swFirstCond"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:text="GIGI"
        app:layout_constraintStart_toEndOf="@+id/labFirstCond"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />


    <ImageButton
        android:id="@+id/bt_clear"
        android:layout_width="121dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageButton
        android:id="@+id/bt_confirm"
        android:layout_width="130dp"
        android:layout_height="62dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:srcCompat="@drawable/green_tick" />

    <Button
        android:id="@+id/bt_cancel"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="371dp"
        android:layout_height="55dp"
        android:layout_marginTop="84dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />



</androidx.constraintlayout.widget.ConstraintLayout>